--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="inner-intro">
       <div class="img-container">
-        <img src="https://lh3.googleusercontent.com/proxy/VpWs2S8bg3dRLMBZoYdFE7n7yKION9sHFP-jxz_dFz70oI09znSdESxKUNRmvreHCJiV-2Nv_yFhXkzFGqf-Rd_yRqzRNp3oH4s4JEBL5MkJ9YDGtj_rmwmk" class="intro-img"></img>
+        <img src="https://media.tarkett-image.com/large/TH_24567081_24594081_24596081_24601081_24563081_24565081_24588081_001.jpg" class="intro-img"></img>
       </div>
       <div class="text-container">
       <h2 class="section-heading">What is VizBlocks?</h2>
