--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <div class="navigation">
         <nav>
           {% for item in site.data.navigation %}
-            <a href="{{ item.link }}">{{ item.name }}</a>
+            <a href="{{site.baseurl}}{{ item.link }}">{{ item.name }}</a>
           {% endfor %}
         </nav>
       </div>
