--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="inner-header">
       <div class="logotype">
-        <a href="/">VizBlocks</a>
+        <a href="{{site.baseurl}}/">VizBlocks</a>
       </div>
       <div class="navigation">
         <nav>
