--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,5 @@
 <div class="banner">
-  <img src="https://wallpapercave.com/wp/wp4008060.jpg">
+  <img src="{{ "/assets/images/placeholder.jpg" | prepend: site.baseurl }}">
   <div class="container">
     <div class="inner-banner">
       <h1 class="main-text">VizBlocks</h1>
