--- a/_includes/system.html
+++ b/_includes/system.html
@@ -5,7 +5,7 @@
       <p class="builds-text">
         {{ site.data.content.system_text }}
       </p>
-      <img src="https://wallpapercave.com/wp/wp4008060.jpg" class="system-img"></img>
+      <img src="{{ "/assets/images/placeholder.jpg" | prepend: site.baseurl }}" class="system-img"></img>
     </div>
   </div>
 </div>
