--- a/_sass/blocks.scss
+++ b/_sass/blocks.scss
@@ -55,6 +55,7 @@ $tooltip-size: 300px;
           font-size: 0.9rem;
           text-align: left;
           color: $primary;
+          cursor: crosshair;
         }
       }
     }
