--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="container">
+  <div class="">
     <div class="inner-header">
       <div class="logotype">
         <a href="{{ "/" | prepend: site.baseurl }}">VizBlocks</a>
@@ -7,7 +7,7 @@
       <div class="navigation">
         <nav>
           {% for item in site.data.navigation %}
-            <a href="{{ item.link | prepend: site.baseurl }}">{{ item.name }}</a>
+            <a href="{{ item.link | prepend: site.baseurl }}" class="{{ item.class }}">{{ item.name }}</a>
           {% endfor %}
         </nav>
       </div>
