--- a/_sass/contact-button.scss
+++ b/_sass/contact-button.scss
@@ -4,6 +4,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    font-size: 1rem;
     a {
       width: 150px;
       padding: 15px;
