lots of cleanup and mobile styling

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,7 @@
 <div class="banner">
-  <img src="{{ "/assets/images/feather.gif" | prepend: site.baseurl }}">
+  <div class="img-container">
+    <img src="{{ "/assets/images/feather.gif" | prepend: site.baseurl }}">
+  </div>
   <div class="container">
     <div class="inner-banner">
       <h1 class="main-text">VizBlocks</h1>
