--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,11 @@
       <div class="logotype">
         <a href="{{ "/" | prepend: site.baseurl }}">VizBlocks</a>
       </div>
-      <div class="navigation">
-        <nav>
+      <div id="navigation" class="desktop">
+        <button onclick="toggleBurger(this)">
+          <i class="fa fa-bars"></i>
+        </button>
+        <nav id="menu">
           {% for item in site.data.navigation %}
             <a href="{{ item.link | prepend: site.baseurl }}" class="{{ item.class }}">{{ item.name }}</a>
           {% endfor %}
@@ -13,4 +16,21 @@
       </div>
     </div>
   </div>
+  <script>
+  const toggleBurger = () => {
+    const menu = document.getElementById('menu');
+    if (menu.className === "collapse") {
+      menu.className = "extend";
+    } else {
+      menu.className = "collapse";
+    }
+  }
+
+  var touchDevice = ('ontouchstart' in document.documentElement);
+  if (touchDevice) {
+    const navigation = document.getElementById('navigation');
+    navigation.className = "mobile";
+  }
+
+  </script>
 </header>
