--- a/_sass/banner.scss
+++ b/_sass/banner.scss
@@ -1,17 +1,33 @@
 .banner {
   position: relative;
   background-color: $light-grey;
-  img {
-    position: absolute;
+  .img-container {
+    position: relative;
     height: 100vh;
-    min-width: 100vw;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    img {
+      position: absolute;
+      min-height: 100%;
+      min-width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
   .inner-banner {
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
     .main-text {
       color: $primary;
       font-family: $title;
