--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -37,46 +37,95 @@ header {
         }
       }
     }
-    .navigation {
-      width: 100%;
-      nav {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        @include md {
-          justify-content: flex-end;
+    #navigation {
+      &.desktop {
+        button {
+          display: none;
         }
-        a {
-          display: inline;
-          font-family: $body;
-          font-size: 0.75rem;
-          font-weight: 500;
-          text-decoration: none;
-          letter-spacing: 1px;
-          color: $white;
-          text-transform: uppercase;
-          padding: 2px 2px 2px 3px;
-          margin: 0px 15px;
-          &.start {
-            display: none;
-          }
-          &:hover {
-            color: $primary;
-            background-color: $white;
-          }
-          &:active {
-            color: $primary;
-            background-color: $secondary;
-          }
+        nav {
+          width: 100%;
+          display: flex;
+          justify-content: center;
           @include md {
-            &:last-child {
-              margin-right: 30px;
+            justify-content: flex-end;
+          }
+          a {
+            display: inline;
+            font-family: $body;
+            font-size: 0.75rem;
+            font-weight: 500;
+            text-decoration: none;
+            letter-spacing: 1px;
+            color: $white;
+            text-transform: uppercase;
+            padding: 2px 2px 2px 3px;
+            margin: 0px 15px;
+            &.start {
+              display: none;
+            }
+            &:hover {
+              color: $primary;
+              background-color: $white;
+            }
+            &:active {
+              color: $primary;
+              background-color: $secondary;
+            }
+            @include md {
+              &:last-child {
+                margin-right: 30px;
+              }
+            }
+            @include lg {
+              &.start {
+                display: inline-block;
+              }
             }
           }
-          @include lg {
-            &.start {
-              display: inline-block;
+        }
+      }
+      &.mobile {
+        // background-color: pink;
+        width: 100%;
+        text-align: right;
+        button {
+          width: 45px;
+          height: 45px;
+          margin-right: 8px;
+          color: $white;
+          background-color: $primary;
+          border: none;
+          i {
+            font-size: 2.5rem;
+          }
+        }
+        nav {
+          width: 100%;
+          height: 80vh;
+          position: absolute;
+          background-color: $primary;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: center;
+          top: 100%;
+          // display: none;
+          a {
+            display: inline;
+            font-family: $body;
+            font-size: 2rem;
+            font-weight: 500;
+            text-decoration: none;
+            letter-spacing: 1px;
+            color: $white;
+            text-transform: uppercase;
+            padding: 15px;
+            &:last-child {
+              margin-bottom: $header-height;
             }
+          }
+          &.collapse {
+            display: none;
           }
         }
       }
