--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
-<header>
-  <div class="">
+<header id="header" class="desktop">
+  <div>
     <div class="inner-header">
       <div class="logotype">
         <a href="{{ "/" | prepend: site.baseurl }}">VizBlocks</a>
       </div>
-      <div id="navigation" class="desktop">
+      <div class="navigation">
         <button onclick="toggleBurger(this)">
           <i class="fa fa-bars"></i>
         </button>
-        <nav id="menu">
+        <nav id="menu" class="collapse">
           {% for item in site.data.navigation %}
             <a href="{{ item.link | prepend: site.baseurl }}" class="{{ item.class }}">{{ item.name }}</a>
           {% endfor %}
@@ -17,6 +17,7 @@
     </div>
   </div>
   <script>
+
   const toggleBurger = () => {
     const menu = document.getElementById('menu');
     if (menu.className === "collapse") {
@@ -26,10 +27,10 @@
     }
   }
 
-  var touchDevice = ('ontouchstart' in document.documentElement);
+  const touchDevice = ('ontouchstart' in document.documentElement);
   if (touchDevice) {
-    const navigation = document.getElementById('navigation');
-    navigation.className = "mobile";
+    const header = document.getElementById("header");
+    header.className = "mobile";
   }
 
   </script>
