--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -4,11 +4,17 @@ layout: default
 <div class="tutorial">
   <div class="container">
     <div class="inner-tutorial">
-      <h1 class="no-banner">Tutorial: {{ page.name }}</h1>
+      <h1 id="no-banner">Tutorial: {{ page.name }}</h1>
       <h2>Description</h2>
       <div class="difficulty {{ page.difficulty | downcase }}">{{ page.difficulty }}</div>
       <p>{{ page.description }}</p>
       {{ content }}
     </div>
   </div>
+  <script>
+    if (touchDevice) {
+      const element = document.getElementById("no-banner");
+      element.className = "mobile";
+    }
+  </script>
 </div>
