--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,44 +1,44 @@
 $header-height: 60px;
 
-header {
-  height: $header-height;
-  width: 100%;
-  background-color: $primary;
-  position: fixed;
-  z-index: 10;
-  .inner-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#header {
+  &.desktop {
     height: $header-height;
-    @include md {
-      justify-content: space-between;
-    }
-    .logotype {
-      a {
-        display: none;
-        font-family: $title;
-        font-size: 1.5rem;
-        text-decoration: none;
-        letter-spacing: 5px;
-        color: $white;
-        padding: 2px 0px 0px 5px;
-        &:hover {
-          color: $primary;
-          background-color: $white;
-        }
-        &:active {
-          color: $primary;
-          background-color: $secondary;
-        }
-        @include md {
-          display: block;
-          margin-left: 30px;
+    width: 100%;
+    background-color: $primary;
+    position: fixed;
+    z-index: 10;
+    .inner-header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: $header-height;
+      @include md {
+        justify-content: space-between;
+      }
+      .logotype {
+        a {
+          display: none;
+          font-family: $title;
+          font-size: 1.5rem;
+          text-decoration: none;
+          letter-spacing: 5px;
+          color: $white;
+          padding: 2px 0px 0px 5px;
+          &:hover {
+            color: $primary;
+            background-color: $white;
+          }
+          &:active {
+            color: $primary;
+            background-color: $secondary;
+          }
+          @include md {
+            display: block;
+            margin-left: 30px;
+          }
         }
       }
-    }
-    #navigation {
-      &.desktop {
+      .navigation {
         button {
           display: none;
         }
@@ -52,8 +52,8 @@ header {
           a {
             display: inline;
             font-family: $body;
-            font-size: 0.75rem;
             font-weight: 500;
+            font-size: 0.9rem;
             text-decoration: none;
             letter-spacing: 1px;
             color: $white;
@@ -84,19 +84,53 @@ header {
           }
         }
       }
-      &.mobile {
-        // background-color: pink;
-        width: 100%;
+    }
+  }
+  &.mobile {
+    height: $header-height * 3;
+    width: 100%;
+    background-color: $primary;
+    position: fixed;
+    z-index: 10;
+    .inner-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: $header-height * 3;
+      .logotype {
+        a {
+          margin-left: 30px;
+          font-family: $title;
+          font-size: 5rem;
+          text-decoration: none;
+          letter-spacing: 5px;
+          color: $white;
+          padding: 10px 10px 0px 15px;
+          &:hover {
+            color: $primary;
+            background-color: $white;
+          }
+          &:active {
+            color: $primary;
+            background-color: $secondary;
+          }
+        }
+      }
+      .navigation {
         text-align: right;
         button {
-          width: 45px;
-          height: 45px;
-          margin-right: 8px;
+          width: 150px;
+          height: 150px;
+          margin-right: 30px;
           color: $white;
           background-color: $primary;
           border: none;
+          &:active {
+            color: $primary;
+            background-color: $secondary;
+          }
           i {
-            font-size: 2.5rem;
+            font-size: 6rem;
           }
         }
         nav {
@@ -108,18 +142,22 @@ header {
           flex-direction: column;
           justify-content: space-around;
           align-items: center;
-          top: 100%;
-          // display: none;
+          top: 99%;
+          left: 0;
           a {
             display: inline;
             font-family: $body;
-            font-size: 2rem;
+            font-size: 4rem;
             font-weight: 500;
             text-decoration: none;
             letter-spacing: 1px;
             color: $white;
             text-transform: uppercase;
             padding: 15px;
+            &:active {
+              color: $primary;
+              background-color: $secondary;
+            }
             &:last-child {
               margin-bottom: $header-height;
             }
