--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -115,9 +115,17 @@ a {
   color: $primary;
 }
 
-.no-banner {
+code {
+  font-family: $code;
+  font-weight: 500;
+  padding: 0 2px;
+}
+
+#no-banner {
   padding-top: 120px;
   padding-bottom: 20px;
   text-align: center;
-  // background: pink;
+  &.mobile {
+    padding-top: 250px;
+  }
 }
