--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,9 @@
         <p>
           VizBlocks is a project by <a href="https://www.designinformatics.org/">The Centre For Design Informatics</a>.
         </p>
+        <p>
+        Site icons by <a href="http://fontawesome.io/">Font Awesome</a>.
+        </p>
       </div>
     </div>
 </footer>
