--- a/_includes/tutorials-list.html
+++ b/_includes/tutorials-list.html
@@ -12,7 +12,7 @@
               <div class="difficulty {{ item.difficulty | downcase }}">{{ item.difficulty }}</div>
               <p class="description">{{ item.description }}</p>
               <p class="link-container">
-                <a href="{{ item.url | prepend: site.baseurl }}">Go to tutorial ↗</a>
+                <a href="{{ item.url | prepend: site.baseurl }}">Go to tutorial</a>
               </p>
             </div>
           </li>
