updating fontawesome link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
     <div class="container">
       <div class="inner-footer">
         <p>
-          VizBlocks is a project by <a href="https://www.designinformatics.org/">The Centre For Design Informatics</a>.
+          VizBlocks is a project by <a href="https://www.designinformatics.org/" target="_blank" rel="noopener noreferrer">The Centre For Design Informatics</a>.
         </p>
         <p>
-        Site icons by <a href="http://fontawesome.io/">Font Awesome</a>.
+        Site icons by <a href="https://fontawesome.com/" target="_blank" rel="noopener noreferrer">Font Awesome</a>.
         </p>
       </div>
     </div>
