--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="inner-intro">
       <div class="img-container">
-        <img src="{{ "/assets/images/stack.png" | prepend: site.baseurl }}" class="intro-img"></img>
+        <img src="{{ "/assets/images/stack.png" | prepend: site.baseurl }}" class="intro-img" alt="Three VizBlocks stacked in a triangle."></img>
       </div>
       <div class="text-container">
         <div class="upper">
