--- a/_includes/system.html
+++ b/_includes/system.html
@@ -6,8 +6,8 @@
         {{ site.data.content.system_text }}
       </p>
       <div id="overview-container" class="desktop">
-        <img id="desktop-overview" src="{{ "/assets/images/overview_horizontal.png" | prepend: site.baseurl }}"></img>
-        <img id="mobile-overview" src="{{ "/assets/images/overview_vertical.png" | prepend: site.baseurl }}"></img>
+        <img id="desktop-overview" src="{{ "/assets/images/overview_horizontal.png" | prepend: site.baseurl }}" alt="Horizontal illustration of how the VizBlock connects to data sources through the Node-RED platform."></img>
+        <img id="mobile-overview" src="{{ "/assets/images/overview_vertical.png" | prepend: site.baseurl }}" alt="Vertical illustration of how the VizBlock connects to data sources through the Node-RED platform."></img>
       </div>
     </div>
   </div>
