--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -6,7 +6,7 @@
         {% for item in site.authors %}
           <li class="item">
             <div class="img-container">
-              <img src="{{ item.image }}"></img>
+              <img src="{{ item.image }}" alt="{{ item.image_alt }}"></img>
             </div>
             <div class="text-container">
               <h3>{{ item.name }}</h3>
