--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="img-container">
-    <img src="{{ "/assets/images/feather.gif" | prepend: site.baseurl }}">
+    <img src="{{ "/assets/images/feather.gif" | prepend: site.baseurl }}" alt="Animated image of a servo block wiggling a green feather.">
   </div>
   <div class="container">
     <div class="inner-banner">
