--- a/_includes/tutorials-list.html
+++ b/_includes/tutorials-list.html
@@ -5,7 +5,7 @@
         {% for item in site.tutorials %}
           <li class="item tutorial-preview">
             <div class="img-container">
-              <img src="{{ item.image }}"></img>
+              <img src="{{ item.image }}" alt="{{ item.image_alt }}"></img>
             </div>
             <div class="text-container">
               <h3>{{ forloop.index }}. {{ item.name }}</h3>
