More accessibility fixes

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ $white: #f2f2f2;
 $light-grey: #cccccc;
 $dark-grey: #444444;
 $black: #222222;
-$primary: #ff3333;
+$primary: #EB0000;
 $secondary: #ffff99;
 $error: #ff9999;
 
