--- a/_sass/banner.scss
+++ b/_sass/banner.scss
@@ -22,7 +22,7 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 100%;
     width: 100%;
@@ -37,7 +37,7 @@
       text-align: center;
       text-transform: uppercase;
       padding-left: 2vw;
-      margin: $header-height*2 0 0 0;
+      margin: $header-height*3 0 10px 0;
       z-index: 9;
       @include sm {
         font-size: 20vw;
@@ -58,15 +58,15 @@
       font-family: $body;
       font-size: 2.5rem;
       text-align: center;
-      margin: 15vh 0 15vh 0;
+      margin-bottom: 40px;
       z-index: 9;
     }
     .cta-text {
       color: $primary;
       font-family: $body;
-      font-size: 2rem;
+      font-size: 1.5rem;
       text-align: center;
-      margin: 0;
+      margin: 0 0 $header-height 0;
       z-index: 9;
     }
   }
