Read me and some tutorial tips

--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -7,7 +7,7 @@ layout: default
       <h1 id="no-banner">Tutorial: {{ page.name }}</h1>
       <h2>Description</h2>
       <div class="difficulty {{ page.difficulty | downcase }}">{{ page.difficulty }}</div>
-      <p>{{ page.description }}</p>
+      <p class="description">{{ page.description }}</p>
       {{ content }}
     </div>
   </div>
