--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -58,3 +58,15 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+.highlight pre code * {
+    white-space: nowrap;    // this sets all children inside to nowrap
+  }
+  
+  .highlight pre {
+    overflow-x: auto;       // this sets the scrolling in x
+  }
+  
+  .highlight pre code {
+    white-space: pre;       // forces <code> to respect <pre> formatting
+  }
